--- a/mydemo-app-prod.properties
+++ b/mydemo-app-prod.properties
@@ -1,2 +1,4 @@
 server.port=8081
-mydemo-app.withdrawLimit=10000
+mydemo-app.maxDailyCash=10000
+mydemo-app.maxDailyWire=500000
+mydemo-app.maxDailyDeposite=999000
