--- a/mydemo-app.properties
+++ b/mydemo-app.properties
@@ -1,4 +1,4 @@
 server.port=8081
 mydemo-app.maxDailyCash=10000
 mydemo-app.maxDailyWire=500000
-mydemo-app.maxDailyDeposite=999000
+mydemo-app.maxDailyDeposit=999000
