--- a/mydemo-app-prod.properties
+++ b/mydemo-app-prod.properties
@@ -1,4 +1,5 @@
 server.port=8081
+management.endpoints.web.exposure.include=refresh
 mydemo-app.maxDailyCash=10000
 mydemo-app.maxDailyWire=750000
 mydemo-app.maxDailyDeposit=999000
