--- a/loan-simulation-dev.yml
+++ b/loan-simulation-dev.yml
@@ -1,3 +1,23 @@
+
+  datasource:
+    url: "jdbc:h2:mem:testdb"
+    driverClassName: "org.h2.Driver"
+    username: "user"
+    password:
+
+
+  jpa:
+    database-platform: "org.hibernate.dialect.H2Dialect"
+    show-sql: true
+    hibernate:
+      ddl-auto: create
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+
 loan:
   payinfour:
     maxAmount: 600
