--- a/loan-simulation-dev.yml
+++ b/loan-simulation-dev.yml
@@ -12,6 +12,12 @@
     hibernate:
       ddl-auto: create
 
+
+  h2:
+    console.enabled: true
+    console.path: /h2-console
+
+
 management:
   endpoints:
     web:
