--- a/customer-accounts-dev.yml
+++ b/customer-accounts-dev.yml
@@ -11,7 +11,9 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: create
-
+    properties:
+      hibernate:
+        format_sql: true
 
   h2:
     console.enabled: true
