load sql data later on

--- a/loan-simulation-dev.yml
+++ b/loan-simulation-dev.yml
@@ -11,7 +11,7 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: create
-
+    defer-datasource-initialization: true
 
   h2:
     console.enabled: true
