--- a/customer-accounts-dev.yml
+++ b/customer-accounts-dev.yml
@@ -11,6 +11,7 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: create
+    defer-datasource-initialization: true
     properties:
       hibernate:
         format_sql: true
