--- a/banking-demo/accounts/customer-accounts-dev.yml
+++ b/banking-demo/accounts/customer-accounts-dev.yml
@@ -22,10 +22,40 @@ spring:
 
 
 management:
+  health:
+    circuitbreakers:
+      enabled: true
   endpoints:
     web:
       exposure:
         include: "*"
+
+  endpoint:
+    health:
+      show-details: ALWAYS
+
+resilience4j:
+  circuitbreaker:
+    configs:
+      default:
+        registerHealthIndicator: true
+        eventConsumerBufferSize: 10
+        failureRateThreshold: 50
+        slidingWindowType: COUNT_BASED
+        slidingWindowSize: 10
+        minimumNumberOfCalls: 5
+        permittedNumberOfCallsInHalfOpenState: 3
+        automaticTransitionFromOpenToHalfOpenEnabled: true
+        waitDurationInOpenState: 5s
+        recordExceptions:
+          - java.util.concurrent.TimeoutException
+          - org.springframework.web.client.HttpServerErrorException
+          - org.springframework.web.client.HttpServerErrorException.InternalServerError
+        ignoreExceptions:
+          - com.customer.accounts.exception.BusinessException
+    instances:
+      loanBreaker:
+        baseConfig: default
 
 
 accounts:
