--- a/banking-demo/accounts/customer-accounts-dev.yml
+++ b/banking-demo/accounts/customer-accounts-dev.yml
@@ -28,7 +28,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: "*"
+        include: health, metrics
 
   endpoint:
     health:
