--- a/banking-demo/accounts/customer-accounts-dev.yml
+++ b/banking-demo/accounts/customer-accounts-dev.yml
@@ -21,6 +21,7 @@ spring:
     console.path: /h2-console
 
 
+
 management:
   health:
     circuitbreakers:
@@ -28,7 +29,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: health, metrics
+        include: health
 
   endpoint:
     health:
@@ -56,6 +57,7 @@ resilience4j:
     instances:
       loanBreaker:
         baseConfig: default
+
 
 
 accounts:
