--- a/banking-demo/accounts/customer-accounts-dev.yml
+++ b/banking-demo/accounts/customer-accounts-dev.yml
@@ -65,6 +65,6 @@ resilience4j:
         ignoreExceptions:
           - com.customer.accounts.exception.BusinessException
     instances:
-      loanBreaker:
+      accountsBreaker:
         baseConfig: default
 
