edited config props

--- a/banking-demo/simulation/loan-simulation-dev.yml
+++ b/banking-demo/simulation/loan-simulation-dev.yml
@@ -61,7 +61,7 @@ resilience4j:
           - org.springframework.web.client.HttpServerErrorException
           - org.springframework.web.client.HttpServerErrorException.InternalServerError
         ignoreExceptions:
-          - com.customer.accounts.exception.BusinessException
+          - com.dagim.loan.exception.BusinessException
     instances:
       loanBreaker:
         baseConfig: default
