--- a/banking-demo/simulation/loan-simulation-dev.yml
+++ b/banking-demo/simulation/loan-simulation-dev.yml
@@ -59,7 +59,8 @@ resilience4j:
         recordExceptions:
           - java.net.ConnectException
         ignoreExceptions:
-          - com.dagim.loan.exception.BusinessException        
+          - com.dagim.loan.exception.BusinessException
+          - feign.RetryableException
     instances:
       loanBreaker:
         baseConfig: default
