--- a/banking-demo/simulation/loan-simulation-dev.yml
+++ b/banking-demo/simulation/loan-simulation-dev.yml
@@ -24,6 +24,11 @@ loan:
     
 server:
   port: 8180
+  error:
+    include-exception: false
+    include-message: ALWAYS
+    include-binding-errors: ALWAYS
+    include-stacktrace: ON_PARAM
 
 customer-accounts:
   api:
