--- a/banking-demo/simulation/loan-simulation-dev.yml
+++ b/banking-demo/simulation/loan-simulation-dev.yml
@@ -1,10 +1,12 @@
 spring:
   datasource:
+    type: com.zaxxer.hikari.HikariDataSource
     url: "jdbc:h2:mem:testdb"
     driverClassName: "org.h2.Driver"
-    username: "user"
-    password:
-
+    username: user
+    password: 
+    hikari:
+      idle-timeout: 10000
 
   jpa:
     database-platform: "org.hibernate.dialect.H2Dialect"
