--- a/banking-demo/simulation/loan-simulation-dev.yml
+++ b/banking-demo/simulation/loan-simulation-dev.yml
@@ -14,7 +14,12 @@ spring:
     hibernate:
       ddl-auto: create
     defer-datasource-initialization: true
-
+  
+  sql:
+    init:
+      mode: EMBEDDED
+      data-locations: "classpath:/db-scripts/data.sql"
+      
   h2:
     console.enabled: true
     console.path: /h2-console
@@ -72,4 +77,6 @@ resilience4j:
       loanBreaker:
         baseConfig: default
 
-
+springdoc:
+  swagger-ui:
+    path: /swagger-ui/
