--- a/banking-demo/accounts/customer-accounts-dev.yml
+++ b/banking-demo/accounts/customer-accounts-dev.yml
@@ -7,6 +7,7 @@ spring:
 
 
   jpa:
+    generate-ddl: true
     database-platform: "org.hibernate.dialect.H2Dialect"
     show-sql: true
     hibernate:
