--- a/banking-demo/simulation/loan-simulation-dev.yml
+++ b/banking-demo/simulation/loan-simulation-dev.yml
@@ -23,11 +23,25 @@ spring:
   h2:
     console.enabled: true
     console.path: /h2-console
+    
+  kafka:
+    admin:
+      properties:
+        bootstrap.servers: localhost:9092, localhost:9093, localhost:9094
+    producer:
+      bootstrap-servers: localhost:9092, localhost:9093, localhost:9094
+      acks: all
+      retries: 5
+      retry.backoff.ms: 150ms
 
 loan:
   paylater:
     frequency: 4
     maxAmount: 600
+    
+newcustomer:
+  loan-event:
+    topic: new-customer-pi4-loan-requested    
     
 server:
   port: 8180
